--- a/README
+++ b/README
@@ -5,7 +5,7 @@ INSTALLATION
 For incoming data, make sure the string is in the following format:
 {sensor board id} {first sensor reading position}, {second sensor reading position}, {etc...}
 
-You need to prepare a Sensor Board node and a Sensor node for each sensor you have attached to your real live sensor board.  The sensor board must send over a string with its own unique identifier at the beginning of every transmission (as seen above).  As for each connected Sensor node, you must define the position in the string that the sensor board is sending over that corresponds with that sensor.
+You need to prepare a Sensor Board node for each unique Sensor Board you have sending the webserver information.  You need to prepare a Sensor node for each sensor you have attached to your real live sensor board.  The sensor board must send over a string with its own unique identifier at the beginning of every transmission (as seen above).  As for each connected Sensor node, you must define the position in the string that the sensor board is sending over that corresponds with that sensor.
 
 CREDIT
 
